<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2024 XperiaLabs Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <!-- App Name -->
    <string name="app_name" translatable="true">Xperia Audio</string>

    <!-- Audio Settings -->
    <string name="audio_menu_title">Audio Settings</string>
    <string name="audio_menu_header">Sound Quality</string>
    <string name="dolby_title">Dolby Sound</string>
    <string name="dolby_summary">Adjust Dolby Sound settings to experience immersive, multidimensional sound that envelops you, bringing movies, music, and games to life</string>
    <string name="threesixtyra_title">360 Reality Audio</string>
    <string name="threesixtyra_summary">Tap here to personalize sound quality</string>
    <string name="threesixtyupmix_title">360 Upmix</string>
    <string name="threesixtyupmix_summary">With Sony\'s 360 Reality Audio Upmix (360 Upmix) technology, you can enjoy spatial and immersive sound with regular stereo sources\nCheck 360 Reality Audio for details.</string>
    <string name="effectpriority_title">Effect Priority</string>
    <string name="effectpriority_summary">The 360 Upmix app will always take priority over the other effects you\'ve turned on (either Dolby Sound with 360 Upmix or just 360 Upmix by itself) for the media sound of apps.</string>
    <string name="audio_menu_footer">While playing Dolby Sound content or 360 Reality Audio content, the content\'s information will take precedence over the settings on this screen. High resolution content can also be play properly when both Dolby Sound and 360 Upmix are turned off.\n\n\n\nAbout Spatial Audio\nTo enable the 360 Reality Audio feature, turn on Spatial Sound.\nDolby Sound does not support Spatial Audio.</string>
</resources>