<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/audio_menu_title">

    <com.android.settingslib.widget.TopIntroPreference
        android:key="audio_top_intro"
        android:title="@string/audio_menu_header"/>

    <PreferenceCategory>

        <Preference
            android:key="audio_dolby"
            android:icon="@drawable/ic_dolby"
            android:title="@string/dolby_title"
            android:summary="@string/dolby_summary"
            android:persistent="false">
            <intent
                android:targetPackage="com.sonyericsson.soundenhancement"
                android:targetClass="com.sonyericsson.soundenhancement.DolbyEffectActivity" />
        </Preference>

        <Preference
            android:key="audio_threesixtyra"
            android:icon="@drawable/ic_threesixtyra"
            android:title="@string/threesixtyra_title"
            android:summary="@string/threesixtyra_summary"
            android:persistent="false">
            <intent
                android:targetPackage="jp.co.sony.threesixtyra.settings"
                android:targetClass="jp.co.sony.threesixtyra.settings.introduction.Introduction360raActivity" />
        </Preference>

        <Preference
            android:key="audio_threesixtyupmix"
            android:icon="@drawable/ic_threesixtyupmix"
            android:title="@string/threesixtyupmix_title"
            android:summary="@string/threesixtyupmix_summary"
            android:persistent="false">
            <intent
                android:targetPackage="jp.co.sony.threesixtyra.settings"
                android:targetClass="jp.co.sony.threesixtyra.settings.settingsmenu.SettingsMenuActivity" />
        </Preference>

        <Preference
            android:key="audio_effectpriority"
            android:title="@string/effectpriority_title"
            android:summary="@string/effectpriority_summary"
            android:persistent="false">
            <intent
                android:targetPackage="com.sonyericsson.soundenhancement"
                android:targetClass="com.sonyericsson.soundenhancement.EffectPriority.TargetAppListActivity" />
        </Preference>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <Preference
            android:key="audio_windnoisereduction"
            android:title="@string/windnoisereduction_title"
            android:summary="@string/windnoisereduction_summary"
            android:persistent="false">
            <intent
                android:targetPackage="com.sonyericsson.soundenhancement"
                android:targetClass="com.sonyericsson.soundenhancement.WindNoiseReductionActivity" />
        </Preference>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    </PreferenceCategory>

    <com.android.settingslib.widget.FooterPreference
        android:key="audio_setting_footer"
        android:title="@string/audio_menu_footer"
        android:selectable="false" />

</PreferenceScreen>